<resources>
    <string name="app_name">Inventory</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tvLogin_txt">Login</string>
    <string name="tieUser">email</string>
    <string name="tiePassword">password</string>
    <string name="cbrecuerdame_txt">Recuerdame</string>
    <string name="cbRecuerdame_txt">Recuerdame</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="tvPlataformas">Iniciar sesion con otras plataformas</string>
    <string name="tvRegistro">Registro</string>
    <string name="tidUsersingup">Introduce tu usuario</string>
    <string name="tieMailSingUp">Introducetu email</string>
    <string name="tiePassSingUp">Introduce una contraseña</string>
    <string name="tieConfirmPassSingUp">Confirmar contraseña</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvCreated">Facha de creacion</string>
    <string name="tvActivated">Fecha de inicio</string>
    <string name="tvEnded">Fecha final</string>
    <string name="tvEdit">Modificar inventario</string>
    <string name="contentDescription">Tienesz que introducir la fecha</string>
    <string name="action_aboutus">Sobre nosotros</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_orderdependency">Ordenar dependencias</string>
    <string name="errEmail">El email no tiene un formato correcto</string>
    <string name="errEmailEmpty">No puede ser vacio el email</string>
    <string name="errEmailErr">El formato del email no es valido</string>
    <string name="errConfirmPass">Las conteseñas no coiciden</string>
</resources>