<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvLogin_marginTop"
        android:layout_marginBottom="@dimen/tvLogin_marginBottom"
        android:text="@string/tvLogin_txt"
        android:textSize="@dimen/title_sizeText"
        android:fontFamily="@font/minecraftia"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/HintTextAppareaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/til_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieUser"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        style="@style/HintTextAppareaces"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/til_margin"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/cbBnt_marginBottom">

        <CheckBox
            android:id="@+id/cbRecuerdame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="@string/cbRecuerdame_txt" />

        <Button
            android:id="@+id/btnRegistrar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorOnSecondary"
            android:layout_width="0dp"
            android:layout_weight="40"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/btnRegistrar" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/btnLogin_width"
        android:backgroundTint="@color/colorSecondary"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/btnLogin" />
    <ProgressBar
        android:id="@+id/pb"
        android:visibility="invisible"
        android:indeterminate="true"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:padding="10dp"
        android:text="@string/tvPlataformas"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgBtnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/google"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imgBtnFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/facebook"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

</LinearLayout>